Add more info to the README, as well as some usage instructions.

--- a/README
+++ b/README
@@ -1,20 +1,21 @@
-Script to configure the USU vpn for a linux machine.
+This is a script to configure the USU vpn for a linux machine.
 
-This is tested and works on Ubuntu 10.10 as long as an updated openswan
-is installed (2.6.31 or later) that enables ALLOW_MICROSOFT_BAD_PROPOSAL.
+This is tested and works on Ubuntu 10.10 with openswan 2.6.32.  It
+will probably work as long as version 2.6.27 is installed (which
+enables ALLOW_MICROSOFT_BAD_PROPOSAL).
 
-You can get one from:
+You can get an updated version for Ubuntu 10.10 from:
 
 http://www.openswan.org/download/binaries/ubuntu/
 
 *NOTE* This script totally blows away the configuration for ppp,
-xl2tpd, and ipsec and replaces it with the necessary usu settings.  It
-also stores your credentials on the disk.
+xl2tpd, and ipsec, and replaces them with the necessary USU settings.  It
+also stores your USU credentials on the disk.
 
 It may work on other distros, I'm not sure.
 
 It's based on the setup that an ex USU sysadmin had posted (which may work
-with an updated openswan, but I haven't tried that)
+with an updated openswan as stated above, but I haven't tried that)
 
 as well as on the info posted at:
 
@@ -24,5 +25,24 @@ This version doesn't make the vpn the default route, but only sets up the
 route necessary to connect to the usu subnet.
 
 This script doesn't use specific dns entries, since it appears that
-the public dns records worked fine.
+USU's public dns records worked fine.
 
+ -- Wade Berrier <wberrier@gmail.com>
+
+----------------
+
+Usage:
+
+#One time setup:
+
+sudo ./usu_vpn install_config
+
+# This will ask for your ANumber and password
+
+# To start the connection:
+
+sudo ./usu_vpn start
+
+# And to stop:
+
+sudo ./usu_vpn stop
